--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
     "fs-extra": "^11.1.1",
-    "body-parser": "^1.20.2"
+    "mongoose": "^8.19.3"
   }
 }
